[package]
name = "mass_http"
version = "0.1.0"
authors = ["lnn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
http = "0.2.1"
structopt = "0.3.13"